--- a/cartoon-hero/index.html
+++ b/cartoon-hero/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test Page</title>
 </head>
 <body>
-    
+    <h1>One big Heading!</h1>
+    <p>Paragraph</p>
 </body>
 </html>
