--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
+    <title>Test page</title>
 </head>
 <body>
-    <h1>One big Heading!</h1>
-    <p>Paragraph</p>
+    <h1>Here is a big heading</h1>
+    <p>example of a paragraph.</p>
 </body>
 </html>
